New Crowdin updates (#26)
* New translations en.json (Spanish, Latin America)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Spanish, Latin America)

* New translations en.json (French)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Spanish, Latin America)

* New translations en.json (German)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Japanese)

* New translations en.json (Japanese)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Polish)

* New translations en.json (Polish)

* New translations en.json (Polish)

* New translations en.json (French)

* New translations en.json (French)

* New translations en.json (Polish)

* New translations en.json (Chinese)

* New translations en.json (Italian)

* New translations en.json (Russian)

* New translations en.json (Russian)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Belarusian)

* New translations en.json (Belarusian)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Italian)

* New translations en.json (German)

* New translations en.json (French)

* New translations en.json (French)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Spanish, Latin America)

* New translations en.

--- a/res/i18n/crowdin/be.json
+++ b/res/i18n/crowdin/be.json
@@ -132,6 +132,7 @@
     "buildings.broadcasttower.desc": "Спараджае культуру і шчасце. Больш эфектыўны пры высокай вытворчасці энергіі.",
     "buildings.calciner.label": "Кальцынер",
     "buildings.calciner.desc": "Высокаэфектыўнае радовiшча металу. Спажывае 1,5 мінералаў і 0,02 алею за цік. Дае жалеза і невялікую колькасць тытана",
+    "buildings.calciner.desc.automation": "Аўтаматызацыя ператварае {0} % вырабленага жалеза ў сталь.",
     "buildings.chapel.label": "Каплiчка",
     "buildings.chapel.desc": "Вырабляе трохі культуры і веры за цік. Можа быць палепшана рэлігійнымі апгрэйдамi",
     "buildings.chronosphere.label": "Хранасфера",
@@ -140,6 +141,7 @@
     "buildings.dataCenter.desc": "Павялічвае агульны эфект кампендыяў на тваю максімальную навуку",
     "buildings.factory.label": "Фабрыка",
     "buildings.factory.desc": "Павышае эфектыўнасць рамяства",
+    "buildings.factory.desc.automation": "Аўтаматыка ачышчае паветра ад забруджванняў.",
     "buildings.field.label": "Поле Кацiнай Мяты",
     "buildings.field.desc": "Пасадзі каціную мяту, каб расла ў вёсцы. Палі маюць +50% вытворчасці вясной і -75% вытворчасці зімой",
     "buildings.field.flavor": "Кацiная мята — куды нi зiрнi",
@@ -179,6 +181,7 @@
     "buildings.observatory.flavor": "Прагненне аднойчы злавіць фею чырвонага святла",
     "buildings.oilWell.label": "Нафтавая свідравіна",
     "buildings.oilWell.desc": "Дае крыху нафты, +1500 да максімальнага ліміту нафты",
+    "buildings.oilWell.desc.automation": "Аўтаматызацыя спажывае энергію для большай здабычы нафты.",
     "buildings.oilWell.flavor": "Уставаць рана, працаваць цяжка, здабываць нафту.",
     "buildings.pasture.label": "Паша",
     "buildings.pasture.desc": "Забяспечвае альтэрнатыўную крыніцу харчавання, што зніжае спажыванне кацінай мяты.",
@@ -188,6 +191,7 @@
     "buildings.quarry.flavor": "Кар'ер каб стварыць паспяховую кар'еру",
     "buildings.reactor.label": "Рэактар",
     "buildings.reactor.desc": "Забяспечвае павелічэнне вытворчасці на 5% падчас актыўнасці. Для працы патрабуецца ўран.",
+    "buildings.reactor.desc.automation": "Аўтаматызацыя спажывае торый, каб вырабляць больш энергіі.",
     "buildings.reactor.flavor": "Зіхатлівых мышэй нашмат лягчэй злавіць!",
     "buildings.refineCatnip.label": "Ачысцi кацiную мяту",
     "buildings.refineCatnip.desc": "Ачысціць каціную мяту ў драўніну з кацінай мяты",
@@ -196,8 +200,12 @@
     "buildings.smelter.flavor": "Сачыце за сваімі вусамі!",
     "buildings.solarfarm.label": "Сонечная ферма",
     "buildings.solarfarm.desc": "Дае дадатковую крыніцу энергіі ў залежнасці ад пары года.",
+    "buildings.spaceport.label": "Касмадром",
+    "buildings.spaceport.desc": "Павялічвае ёмістасць будынкаў у космасе. Не ўплывае на навуку або антыматэрыю.",
+    "buildings.spaceport.flavor": "Я хачу, каб модная пража была імпартаваная з Пражы.",
     "buildings.steamworks.label": "Паравы завод",
     "buildings.steamworks.desc": "Пры актыўнасці значна зніжае здабычу вугалю. Па змаўчанні не робіць нічога карыснага, але можа рабіць шмат цікавых рэчаў пасля абнаўлення.",
+    "buildings.steamworks.desc.automation": "Аўтаматызацыя стварае некаторыя матэрыялы, калі яны запоўнілі ўвесь ліміт сховішча.",
     "buildings.steamworks.flavor": "Я проста сплю тут і, здаецца, працую",
     "buildings.brewery.label": "Браварня",
     "buildings.brewery.desc": "Завары каціную мяту ў рэзкі напой. Узмацняе эфекты пад час фестывалю.",
@@ -265,6 +273,10 @@
     "calendar.year.ext": "Год {0} - {1}",
     "calendar.year.full": "Год {0} - {1}, дзень {2}",
     "calendar.year.tooltip": "Год:",
+    "challendge.effects.show.label": "Паказваць эфекты Выклiку",
+    "challendge.effects.toggle.desc": "Пераключыць зводку ўсіх эфектаў вашых выклікаў.",
+    "challendge.effects.hide.label": "Схаваць эфекты Выклiку",
+    "challendge.effects.panel.label": "Эфекты {0} Выклiку",
     "challendge.panel.label": "Выклікі",
     "challendge.pending": "Чакае",
     "challendge.reclaimReserves.label": "Адваяваць рэсурсы",
@@ -338,6 +350,7 @@
     "effectsMgr.statics.boostFromLeader.title": "Павышэнне ад лідэра",
     "effectsMgr.statics.breweryConsumptionRatio.title": "Каэфіцыент спажывання бровара",
     "effectsMgr.statics.broadcastTowerRatio.title": "Бонус Вяшчальнай вежы",
+    "effectsMgr.statics.bskSattelitePenalty.title": "Штаф Спадарожнікавай базы",
     "effectsMgr.statics.cadBlueprintCraftRatio.title": "Бонус за стварэнне чарцяжоў",
     "effectsMgr.statics.calcinerRatio.title": "Бонус за Кальцынер",
     "effectsMgr.statics.calcinerSteelCraftRatio.title": "Бонус кальцынера металургічных заводаў",
@@ -360,6 +373,7 @@
     "effectsMgr.statics.crackerRatio.title": "Бонус драбнільнай устаноўкі",
     "effectsMgr.statics.craftRatio.title": "Бонус стварэння",
     "effectsMgr.statics.cryochamberSupport.title": "Падтрымка крыякамеры",
+    "effectsMgr.statics.cryostationStorageBonus.title": "Бонус за магутнасць крыястанцыі",
     "effectsMgr.statics.cryostation-coalMax.title": "Крыястанцыя - макс. вугалю",
     "effectsMgr.statics.cryostation-ironMax.title": "Крыястанцыя - макс. жалеза",
     "effectsMgr.statics.cryostation-mineralsMax.title": "Крыястанцыя - макс. мiнералаў",
@@ -408,6 +422,7 @@
     "effectsMgr.statics.harborRatio.title": "Павелічэнне ёмістасці караблёў за кошт колькасці гаваняў",
     "effectsMgr.statics.hashrate.title": "Хэшрэйт",
     "effectsMgr.statics.hashrateLevel.title": "Узровень хешрэйту",
+    "effectsMgr.statics.heatEfficiency.title": "Эфектыўнасць цеплааддачы",
     "effectsMgr.statics.heatMax.title": "Максімальная тэмпература",
     "effectsMgr.statics.heatMaxExpansion.title": "Максімальнае цеплавое пашырэнне",
     "effectsMgr.statics.heatPerTick.title": "Цеплаабмен",
@@ -437,6 +452,7 @@
     "effectsMgr.statics.manuscriptCost.title": "Кошт рукапісу {0}",
     "effectsMgr.statics.maxKittens.title": "Кацяняты",
     "effectsMgr.statics.maxKittensRatio.title": "Максімальная колькасць кацянят",
+    "effectsMgr.statics.moonBaseStorageBonus.title": "Бонус магутнасці базы Месяца",
     "effectsMgr.statics.moonOutpost-unobtainiumPerTickSpace.title": "Месяцовы фарпост - канверсія унабтаінія",
     "effectsMgr.statics.mysticismBonus.title": "Бонус містыцызму",
     "effectsMgr.statics.necrocornPerDay.pact.title": "Спажыванне Некрарогаў",
@@ -455,6 +471,7 @@
     "effectsMgr.statics.pactGlobalResourceRatio.title": "Месца для захоўвання за піраміду",
     "effectsMgr.statics.pollutionRatio.title": "Вытворчасць забруджванняў",
     "effectsMgr.statics.policyFakeBought.title": "1,25 мультыплікатар кошту палітыкі",
+    "effectsMgr.statics.planetCrackerStorageBonus.title": "Бонус ёмістасці Ўзломшчыку планет",
     "effectsMgr.statics.planetCracker-uraniumPerTickSpace.title": "Планетная драбнільная ўстаноўка - канверсія ўрану",
     "effectsMgr.statics.priceRatio.title": "Кошты на будынак",
     "effectsMgr.statics.prodTransferBonus.title": "Перанесены бонус за вытворчасць па ўсей кацiнай планеце",
@@ -989,6 +1006,7 @@
     "res.effect": "Эфект",
     "res.effects": "Эфекты",
     "res.netGain": "Чысты прыбытак",
+    "res.netGainPerDay": "Чыстая дэльта ў дзень",
     "res.notify.msg": "Ты атрымаеш апавяшчэнне, калі {0} стане даступным.",
     "res.notify.ready.title": "Дастаткова рэсурсаў, каб купіць",
     "res.notify.ready": "{0} гатовы",
@@ -1426,6 +1444,7 @@
     "space.yarnMission.label": "Мiсiя \"Пража\"",
     "space.yarnMission.desc": "Пража - гэта планета класа М з умераным кліматам, морам і кіслароднай атмасферай.",
     "stats.buildings": "Пабудаваныя будынкі",
+    "stats.challenges.total": "Выклiкаў выканана",
     "stats.clicks.total": "Агульная колькасць пстрычак",
     "stats.crafts.current": "Колькасць вырабаў",
     "stats.crafts.total": "Колькасць вырабаў",
@@ -1441,6 +1460,7 @@
     "stats.time.current": "Час у гульні",
     "stats.trades.current": "Гандлі завершаны",
     "stats.trades.total": "Гандлі завершаны",
+    "stats.transcendenceTier": "Узровень Трансцэндэнтнасцi",
     "stats.unicorns": "Аднарогаў, прынесеных ў ахвяру",
     "stats.years.total": "Агульная колькасць гадоў у гульні",
     "tab.name.achievements": "Дасягненні",
@@ -1459,6 +1479,7 @@
     "time.AccelerateTimeBtn.tooltip.accelerated": "Паскораная плынь часу",
     "time.cfu.blastFurnace.label": "Хранапеч",
     "time.cfu.blastFurnace.desc": "Працуе на хранагрэве. Павялічвае максімальны ліміт цяпла на 100.",
+    "time.cfu.blastFurnace.desc2": "Аўтаматызацыя прапускае адзін год у будучыню за кожныя 100% спажытага паліва.",
     "time.cfu.ressourceRetrieval.label": "Пошук рэсурсаў",
     "time.cfu.ressourceRetrieval.desc": "Атрымлівай частку сваіх гадавых рэсурсаў, спальваючы КЧ",
     "time.cfu.temporalAccelerator.label": "Часовы паскаральнік",
@@ -1468,6 +1489,7 @@
     "time.cfu.temporalBattery.desc": "Паляпшае тваю энергетычную ёмістасць патоку на 25%",
     "time.cfu.temporalPress.label": "Прэс часу",
     "time.cfu.temporalPress.desc": "Дазваляе дакладна наладзіць драбненне",
+    "time.cfu.temporalPress.desc.automation": "Аўтаматызацыя наладжвае карыстацкую колькасць разбурэння.",
     "time.cfu.temporalImpedance.label": "Імпеданс часу",
     "time.cfu.temporalImpedance.desc": "Адтэрміноўка эфекту часовага пакарання Цёмнай будучыні на 1000 гадоў.",
     "time.cfu.timeBoiler.label": "Кацёл часу",
@@ -1561,6 +1583,7 @@
     "trade.correct.bcoin": "Адбылася велізарная карэкцыя крыптарынку",
     "trade.embassy.label": "Прадстаўніцтва",
     "trade.embassy.desc": "Палепшы свае дыпламатычныя адносіны, адкрыўшы амбасаду",
+    "trade.embassy.chance": "Шанец атрымаць рэсурсы",
     "trade.embassy.pinned": "Прышпiленае",
     "trade.embassy.unpinned": "Адшпiленае",
     "turnHGOff.confirmation.msg": "Ты ўпэўнены, што хочаш адключыць Святы генацыд для гэтага і будучых серый?",
@@ -1871,6 +1894,7 @@
     "eta.hour": "г",
     "eta.min": "х",
     "eta.sec": "с",
+    "modal.button.ok": "OK",
     "modal.button.cancel": "Скасаваць",
     "workshop.upgradePanel.label": "Апгрэйды",
     "workshop.all.upgrades.unlocked": "Усе апгрэйды разблакаваны!",
