--- a/res/i18n/crowdin/eo.json
+++ b/res/i18n/crowdin/eo.json
@@ -5,29 +5,62 @@
     "achievements.msg.unlock": "Trofeumo trovita: {0}!",
     "achievements.msg.starUnlock": "Trofeuma stelo trovita: {0}!",
     "achievements.anachronox.desc": "Bonu halti",
+    "achievements.atlasUnmeowed.title": "Atlaso malmiaŭita",
+    "achievements.atlasUnmeowed.desc": "Konstrui dinamon en Fervola reĝimo",
     "achievements.cathammer.title": "Katmartelo 40 mil",
+    "achievements.cathammer.desc": "En la nuba kaj malluma estonteco de la kataro",
+    "achievements.cathammer.starDesc": "En la nuba kaj malluma estonteco de la kataro ne estas restarigoj",
+    "achievements.deadSpace.title": "Morta Spaco",
     "achievements.deadSpace.desc": "Neniu povas aŭdi vian miaŭon en kosmo.",
     "achievements.heartOfDarkness.title": "Koro de Mallumeco",
+    "achievements.heartOfDarkness.desc": "Fariĝi la tribestro de la zebra tribo. (Kiel tio estas ebla?)",
     "achievements.hundredYearsSolitude.title": "Cent Jaroj de Soleco",
     "achievements.hundredYearsSolitude.desc": "Kiom estas tro for?",
     "achievements.ironWill.title": "Fera Volo",
     "achievements.ironWill.desc": "Vi vere meritis tiun",
+    "achievements.jupiterAscending.title": "Jupitero Altiĝanta",
     "achievements.jupiterAscending.desc": "Iru kosmon dum la unua jaro",
     "achievements.limitlessClicker.title": "Nelima Musklakanto",
     "achievements.limitlessClicker.desc": "Akumulu 100,000 musklakojn.",
     "achievements.limitlessClicker.starDesc": "Akumulu 1,000,000 musklakojn.",
+    "achievements.lotusMachine.title": "Lotusmanĝanta Maŝino",
+    "achievements.lotusMachine.desc": "Rompi la ciklon de reenkarniĝoj",
     "achievements.meowMeowRevolution.title": "Miaŭ Miaŭ Revolucio",
+    "achievements.meowMeowRevolution.desc": "Konstrui fabrikon en Fervola reĝimo",
     "achievements.panel.label": "Trofeumoj",
+    "achievements.serenity.title": "Sereno",
     "achievements.serenity.desc": "Havu 50 katetojn sen mortitojn",
+    "achievements.shadowOfTheColossus.title": "Ombro de la Koloso",
+    "achievements.shadowOfTheColossus.desc": "Konstrui Ziguraton have nur unu katido",
+    "achievements.sinsOfEmpire.title": "Pekoj de Suna Imperio",
+    "achievements.sinsOfEmpire.desc": "Atendu, serioze?",
+    "achievements.soilUptuned.title": "Virga Tero Renversita",
+    "achievements.soilUptuned.desc": "Havi 45 paŝtejojn en Fervola reĝimo",
+    "achievements.spaceOddity.title": "Kosma Kuriozaĵo",
+    "achievements.spaceOddity.desc": "Fini Lunan Programon en Fervola reĝimo",
+    "achievements.spaceOddity.starDesc": "Atingi Lunan Programon en FR mankante ajnaj primpunktoj",
     "achievements.sunGod.title": "Suna Dio",
+    "achievements.sunGod.desc": "Gajni tuton je 696,342 adoro",
+    "achievements.superUnethicalClimax.title": "Tre Maletika Klimakso",
     "achievements.superUnethicalClimax.desc": "Ludodiu viavoje tra ludon.",
+    "achievements.systemShock.title": "Sistema Ŝoko",
+    "achievements.systemShock.desc": "Mi bedaŭras, Davo, Mi timas, ke mi ne povas fari tion.",
+    "achievements.theElderLegacy.title": "La Plejaĝula Heredo",
+    "achievements.theElderLegacy.desc": "Esti unua ludanto kiu provas Kittens Game Mobile",
+    "achievements.uberkatzhen.title": "Uberkatzchen",
     "achievements.uberkatzhen.desc": "Kio fortigos ne mortiginte vin",
+    "achievements.uniception.title": "Uniception",
+    "achievements.uniception.desc": "Trovi la konspiron ene la konspiro",
+    "achievements.unicornConspiracy.title": "Unikorna Konspiro",
+    "achievements.unicornConspiracy.desc": "Levi la vualon de la unikorna konspiro!",
     "achievements.utopiaProject.title": "Utopia Projekto",
     "achievements.utopiaProject.desc": "Atingis suman feliĉecon supere pli 150%",
     "achievements.utopiaProject.starDesc": "Atingis suman feliĉecon supere pli 500%",
     "achievements.winterIsComing.title": "Vintro venanta",
     "achievements.winterIsComing.desc": "Havu 10 katetojn mortitajn",
     "achievements.youMonster.title": "Vi Monstro",
+    "achievements.youMonster.desc": "Kompatindaj katidoj.",
+    "achievements.deathStranding.desc": "Atingi Plej Malproksiman Ringon",
     "ai.apocalypse.msg": "AI malkreis {0}% viajn provizojn",
     "bld.msg.automation": "Ŝaltas farejaŭtomaton",
     "bld.msg.automation.beams": "Transformis {0} lignojn, +{1} traboj!",
@@ -55,6 +88,7 @@
     "btn.on.tooltip": "Konstruaĵo povita",
     "btn.precraft": "Antaŭfari",
     "btn.prevPage": "Antaŭa paĝo",
+    "btn.promote": "Promocii",
     "btn.refine": "Rafini",
     "btn.research": "Esplori",
     "btn.reset": "Rekomenci",
@@ -67,21 +101,41 @@
     "construct.all.confirmation.msg": "Ĉu vi certe volas konstrui ĉiom konstruaĵojn?",
     "construct.all.msg": "{0} ×{1} konstruita(j).",
     "buildings.academy.label": "Akademio",
+    "buildings.academy.desc": "Plibonigas vian esploran rilaton kaj la rapidecon de kreskado de via katida lerteco. Ĉiu promocia nivelo plibonigas vian esploradon je 20%",
     "buildings.academy.flavor": "Scivolo estas la bazo de scienco. Niaj katoj mortis noble",
     "buildings.accelerator.label": "Akceliganto",
+    "buildings.accelerator.desc": "Konvertas titanon al la uranio (sic)",
+    "buildings.accelerator.flavor": "Granda Koliziigilo de Katronoj",
     "buildings.aicore.label": "AI-a Koro",
+    "buildings.aicore.desc": "KataOS, unuaranga artefarita intelekta. Tute ne malutila. Ĉiu nivelo de promocio pliigis kernan energiuzadon je 75%.",
+    "buildings.aicore.flavor": "Mi pensas, ke ni povas formeti niajn diferencojn. Por scienco.",
     "buildings.aicore.attemptsell": "Aliro ne permesita.",
+    "buildings.amphitheatre.label": "Amfiteatro",
+    "buildings.amphitheatre.desc": "Malpliigas negativajn efikojn de tropopulacio.",
+    "buildings.amphitheatre.flavor": "Ĉiutage 'Ĉiuj Hundoj Iras al Paradizo' montroj",
     "buildings.aqueduct.label": "Akvodukto",
     "buildings.aqueduct.desc": "+3% pli kataria produktado",
     "buildings.aqueduct.flavor": "Ne naĝu",
     "buildings.barn.label": "Grenejo",
     "buildings.barn.desc": "Konstruaĵo por konservi viajn provizojn.",
+    "buildings.barn.flavor": "Ratoj nesta' problemo por ni!",
     "buildings.biolab.label": "Biolab-o",
+    "buildings.biolab.desc": "Plibonigas efikecon de katherba rafino je 10%. Pli efika kiam ŝaltita.",
+    "buildings.biolab.flavor": "Nova postdok-aj pozicioj disponeblas.",
     "buildings.broadcasttower.label": "Elsendoturo",
+    "buildings.broadcasttower.desc": "Generas kultoron kaj feliĉon. Pli efika kun alta energiproduktado.",
+    "buildings.calciner.label": "Kalcinilo",
+    "buildings.calciner.desc": "Tre efika fonto de mtalo. Konusmas po 1.5 mineralojn kaj 0.02 oleon en ludtiko. Produktas feron kaj malgrandan kvanton de titanio",
+    "buildings.calciner.desc.automation": "Aŭtomatigo konvertas {0}% de fera eligaĵo al ŝtalo.",
     "buildings.chapel.label": "Preĝejo",
+    "buildings.chapel.desc": "Produktas iom da kultura kaj fido ludtike. Ĝin povas plibonigi religiaj promocioj",
+    "buildings.chronosphere.label": "Kronosfero",
+    "buildings.chronosphere.desc": "Relokigis malgrandan kvanton de rimedoj tra tempo. Povas esti plu promociita. Ĉiu Kronosfero pliigis la ŝancon de Tempa Paradokso.",
     "buildings.dataCenter.label": "Datumara Centro",
+    "buildings.dataCenter.desc": "Pliigas la tutan efikon de kompendioj ĉe via maksimuma scienco",
     "buildings.factory.label": "Faktorio",
     "buildings.factory.desc": "Plibonigas faran rendimenton",
+    "buildings.factory.desc.automation": "Aŭtomatigo purigis poluon el la aero.",
     "buildings.field.label": "Kataria kampo",
     "buildings.field.desc": "Plantu kreski kelkan katarion en vilaĝo. Kampoj produktadi +50% dum printempo kaj produktadi -75% dum Vintro",
     "buildings.field.flavor": "'Manĝetadu kiel fore la okulo povas vidi plej fore.",
@@ -92,28 +146,58 @@
     "buildings.hut.label": "Dometo",
     "buildings.hut.desc": "Konstruu dometon (ĉiu povas enhavi du katetojn). Katetoj bezonas katarion por satiĝado, aŭ alie tiuj mortos.<br>Ĉiu kateto konsumos preskaŭ 4 katariojn/s",
     "buildings.hut.flavor": "La Nacio da Du",
+    "buildings.hydroplant.label": "Akvelektrejo",
+    "buildings.hydroplant.desc": "Moderna fonto de energia produktado",
+    "buildings.ivoryTemple.label": "Ebura Templo",
+    "buildings.ivoryTemple.desc": "Mistika templo, kie ebura estas konvertita al mineraloj",
     "buildings.library.label": "Biblioteko",
+    "buildings.library.desc": "Konstrui bibliotekon por konservi sankta scio de la kataro. Ĉiu promocia nivelo plibonigas vian sciencan eligon je 10%",
+    "buildings.library.flavor": "Ĉio en la katona",
     "buildings.logHouse.label": "Ligna Domo",
     "buildings.logHouse.desc": "Konstrui domon (ĉiu havas spacon por 1 kateto)",
+    "buildings.logHouse.flavor": "La Kabano en la Arbaro",
     "buildings.lumberMill.label": "Segejo",
+    "buildings.lumberMill.desc": "Plibonigas ligna produktado je 10%",
+    "buildings.lumberMill.flavor": "Plej bona ŝtipa analizilo",
+    "buildings.magneto.label": "Dinamo",
+    "buildings.magneto.desc": "Plibonigas vian tutan produktado de rimedoj je 2%. Ĉiu Vaporfabriko plibonigas tiun efikon je 15%. Konsumas oleon.",
     "buildings.mansion.label": "Domego",
     "buildings.mansion.desc": "Vasta domego (havas spacon por po 1 kateto)",
+    "buildings.mansion.flavor": "La plej bona ŝipada ujo disponebla",
     "buildings.mine.label": "Minejo",
     "buildings.mine.desc": "Malŝlosos ministan laboron. Ĉiu promocio pliigos vian produktadon por mineraloj po 20%",
+    "buildings.mine.flavor": "0 tagoj de kiam lasta misaĵo okazis",
+    "buildings.mint.label": "Monfarejo",
+    "buildings.mint.desc": "Produktas luksajn rimedojn proporcie al via maksimuma katpovo. Konsumis katpovon kaj iomete da oro.",
     "buildings.observatory.label": "Observejo",
+    "buildings.observatory.desc": "Pliigis la ŝancon de astronomiaj okazoj je 0.2%",
+    "buildings.observatory.flavor": "Avidas por iam kapti la ruĝluman feon",
     "buildings.oilWell.label": "Naftoputo",
     "buildings.oilWell.desc": "Produktas kelketan nafton, +1500 al limo de nafto",
+    "buildings.oilWell.desc.automation": "Aŭtomatigo konsumis energion por pli da olea produktado.",
     "buildings.oilWell.flavor": "Veki frue, labori forte, trovi nafton.",
     "buildings.pasture.label": "Paŝtejo",
     "buildings.pasture.desc": "Provizas manĝaĵan fonton alian do malplias katarian malproduktadon.",
+    "buildings.pasture.flavor": "Prenu pindo da lakto, Sinjoro!",
     "buildings.quarry.label": "Ŝtonminejo",
     "buildings.quarry.desc": "Ŝtonminejoj plibonigas je 35% vian rendimenton minadan kaj produktados iometon da karbo",
+    "buildings.quarry.flavor": "Estas plena de talpuloj! Haltu, malĝusta minejo",
+    "buildings.reactor.label": "Reaktoro",
+    "buildings.reactor.desc": "Aldonas 5% altigo al produktado kiam aktiva. Bezonas uranion por operacio.",
+    "buildings.reactor.desc.automation": "Aŭtomatigo konsumas torion por produkti pli da energio.",
+    "buildings.reactor.flavor": "Ardaj musoj estas tre pli facile kaptata!",
     "buildings.refineCatnip.label": "Rafini katarion",
     "buildings.refineCatnip.desc": "Rafini katarion al ligno kataria",
     "buildings.smelter.label": "Elfandujo",
     "buildings.smelter.desc": "Fandas ercon al metalo",
     "buildings.smelter.flavor": "Protektu viajn vangharojn!",
     "buildings.solarfarm.label": "Suna Agro",
+    "buildings.solarfarm.desc": "Provizas kroman fonton de energio, depende sur la sezonoj.",
+    "buildings.spaceport.label": "Kosmohaveno",
+    "buildings.spaceport.desc": "Pliigis la tenenhavon de konstruaĵoj en la kosmo. Ne efikas scienco aŭ antimaterio.",
+    "buildings.spaceport.flavor": "Mi volas la riĉan fadenon importita el Fadeno.",
+    "buildings.steamworks.label": "Vaporfabriko",
+    "buildings.steamworks.desc": "Kiam aktiva, iomege malpliigas vian produktadon de karbo. Ne utilas komence, sed povas fari multajn mojosajn aferojn kiam ĝi estas promociita.",
     "buildings.tradepost.label": "Negocejo",
     "buildings.tradepost.desc": "La koro de komerca imperio via. Ĝi plibonigas efikecon de negoco +1,5%-e, kaj malplias 4%-e malproduktadon de maloftaj provizoj",
     "buildings.tradepost.flavor": "Mi esperas ke oni havas fadenbulon",
@@ -177,8 +261,16 @@
     "challendge.btn.name.complete": "{0} (Finita)",
     "challendge.btn.name.current": "{0} (Aktiva)",
     "common.expand.all": "Etendi ĉiujn",
+    "effectsMgr.statics.activeHG.title": "Aktiva",
+    "effectsMgr.statics.aiCoreProductivity.title": "AI kerno produktado",
+    "effectsMgr.statics.aiLevel.title": "AI Nivelo",
+    "effectsMgr.statics.antimatterProduction.title": "Antimateria produktado",
+    "effectsMgr.statics.barnRatio.title": "Garbeja plivastiĝo",
+    "effectsMgr.statics.baseMetalMaxRatio.title": "Bonuso de baza maksimuma metalo",
+    "effectsMgr.statics.biofuelRatio.title": "Biobrulaĵa Bonuso",
     "effectsMgr.statics.blackLibraryBonus.title": "Nigra Biblioteko plibonigo",
     "effectsMgr.statics.blsLimit.title": "Limo NLP",
+    "effectsMgr.statics.broadcastTowerRatio.title": "Elsendotura bonuso",
     "effectsMgr.statics.catnipDemandWorkerRatioGlobal.title": "Malpliigo por kataria konsumado de Laboristoj",
     "effectsMgr.statics.catnipJobRatio.title": "Agristaj iloj",
     "effectsMgr.statics.catnipMaxRatio.title": "Kataridepona pliigo",
