--- a/res/i18n/crowdin/it.json
+++ b/res/i18n/crowdin/it.json
@@ -734,6 +734,7 @@
     "religion.sacrificeBtn.label": "Sacrifica Unicorni",
     "religion.sacrificeBtn.desc": "Manda gli unicorni nella Dimensione Unicorno. Riceverai una Lacrima di Unicorno per ogni Ziggurat che possiedi.",
     "religion.transcend.confirmation.title": "Trascendere?",
+    "religion.transcend.confirmation.msg": "Sei sicuro di voler scartare parte della tua epifania?\n\nPuoi raggiungere speciali livelli di trascendenza sacrificando parte della tua epifania.\n\nOgni livello aumenterà l'efficacia della conversione del culto (Adore the stars).\n\nOgni livello richiede proporzionalmente più epifania da sacrificare.\n\nQuesto bonus si accumulerà e verrà trasferito durante i ripristini.\n\nCLICCANDO QUESTO PULSANTE CANCELLERAI PARTE DELLA TUA EPIFANA E LODANDO L'EFFICIENZA.",
     "religion.transcend.msg.failure": "One step closer: {0} ({1}%)",
     "religion.transcend.msg.success": "Hai trasceso i limiti dei mortali. T-level: {0}",
     "religion.transcendBtn.label": "Trascendi",
@@ -804,7 +805,7 @@
     "res.stack.time": "Tempo",
     "res.stack.tools": "Attrezzi",
     "res.stack.upgrades": "Potenziamenti",
-    "res.stack.village": "(:3) Villaggio",
+    "res.stack.village": "(:3) villagio",
     "res.stack.weather": "Tempo",
     "res.toCap": "Alla capienza",
     "res.toZero": "A zero",
@@ -1355,6 +1356,7 @@
     "effectsMgr.workshop.eludiumAutomationBonus.title": "Bonus automazione elusite",
     "btn.praise": "Lodare",
     "village.name.Angel": "Angelo",
+    "village.name.Charlie": "Charlie",
     "village.name.Lily": "Giglio",
     "village.name.Jasper": "Diaspro",
     "village.name.Timber": "Legname",
