--- a/res/i18n/crowdin/ja.json
+++ b/res/i18n/crowdin/ja.json
@@ -453,7 +453,7 @@
     "effectsMgr.statics.pactFaithRatio.title": "ピラミッドごとの信仰",
     "effectsMgr.statics.pactGlobalProductionRatio.title": "ピラミッドごとの生産",
     "effectsMgr.statics.pactGlobalResourceRatio.title": "ピラミッドごとのストレージ",
-    "effectsMgr.statics.pollutionRatio.title": "公害を発生",
+    "effectsMgr.statics.pollutionRatio.title": "公害発生",
     "effectsMgr.statics.policyFakeBought.title": "1.25 政策コスト乗算",
     "effectsMgr.statics.planetCracker-uraniumPerTickSpace.title": "惑星破砕船 - ウラン変換",
     "effectsMgr.statics.priceRatio.title": "建物の歩合",
@@ -1167,7 +1167,7 @@
     "science.artificialGravity.effectDesc": "長距離航行宇宙船をアンロック。",
     "science.artificialGravity.flavor": "-肉球めざめる-",
     "science.biochemistry.label": "生物化学",
-    "science.biochemistry.desc": "化学と生物学に関係する技術を向上させます。",
+    "science.biochemistry.desc": "化学と生物学に関連した技術を向上させます",
     "science.biochemistry.effectDesc": "バイオ燃料加工をアンロックします。",
     "science.biochemistry.flavor": "分子が行ういくつかのこと。",
     "science.biology.label": "生物学",
@@ -1836,7 +1836,7 @@
     "effectsMgr.heatPerTick.title": "放熱量",
     "effectsMgr.timeImpedance.title": "タイム インピーダンス",
     "btn.praise": "賛美する",
-    "village.label.na": "N/A",
+    "village.label.na": "無効",
     "village.name.Angel": "エンジェル",
     "village.name.Oreo": "オレオ",
     "village.name.Charlie": "チャーリー",
@@ -2012,7 +2012,7 @@
     "workshop.crossbow.label": "クロスボウ",
     "workshop.crossbow.desc": "キャットパワーの産出を永久に25%向上させる改良された様式の弓です。",
     "workshop.cryocomputing.label": "クライオコンピューティング",
-    "workshop.cryocomputing.desc": "データセンターのエネルギー消費が50%減少",
+    "workshop.cryocomputing.desc": "データセンターのエネルギー消費が50%減少します",
     "workshop.darkEnergy.label": "闇のエネルギー",
     "workshop.darkEnergy.desc": "エネルギーリフトが資源貯蔵において2.5倍効果が上がります。",
     "workshop.deepMining.label": "深部採掘",
