--- a/res/i18n/crowdin/pl.json
+++ b/res/i18n/crowdin/pl.json
@@ -62,6 +62,8 @@
     "achievements.youMonster.title": "Ty potworze",
     "achievements.youMonster.desc": "Biedne kocięta.",
     "ai.apocalypse.msg": "AI zniszczyła {0}% twoich zasobów",
+    "badges.header": "Odznaki: {0} z {1}",
+    "badges.panel.label": "Odznaki",
     "bld.msg.automation": "Aktywacja automatyki warsztatowej",
     "bld.msg.automation.beams": "Zużyto {0} drewna, wykonano {1} belek!",
     "bld.msg.automation.plates": "Zużyto {0} żelaza, wykonano {1} blach!",
@@ -127,6 +129,7 @@
     "buildings.broadcasttower.desc": "Zapewnia kulturę i szczęście. Im większa produkcja prądu, tym silniejszy jest ten efekt.",
     "buildings.calciner.label": "Kalcynator",
     "buildings.calciner.desc": "Wysoce wydajne źródło metalu. Zużywa 1.5 minerałów i 0.02 paliwa na tick. Produkuje żelazo i niewielką ilość tytanu",
+    "buildings.calciner.desc.automation": "Automatyzacja przetwarza {0}% wyprodukowanego żelaza na stal.",
     "buildings.chapel.label": "Kaplica",
     "buildings.chapel.desc": "Produkuje niewielką ilość kultury i wiary.",
     "buildings.chronosphere.label": "Chronosfera",
@@ -174,6 +177,7 @@
     "buildings.observatory.flavor": "Kiedyś uda się złapać magiczną, czerwoną wróżkę.",
     "buildings.oilWell.label": "Szyb Naftowy",
     "buildings.oilWell.desc": "Wydobywa ropę, zwiększa limit ropy o 1500",
+    "buildings.oilWell.desc.automation": "Automatyzacja zużywa energię dla większej produkcji ropy naftowej.",
     "buildings.oilWell.flavor": "Kto rano wstaje, ten ropę dostaje.",
     "buildings.pasture.label": "Pastwisko",
     "buildings.pasture.desc": "Zapewnia alternatywne źródło żywności, przez co redukuje spożycie kocimiętki.",
@@ -260,6 +264,8 @@
     "calendar.year.ext": "Rok {0} - {1}",
     "calendar.year.full": "Rok {0} - {1}, dzień {2}",
     "calendar.year.tooltip": "Rok:",
+    "challendge.effects.show.label": "Pokaż efekty wyzwania",
+    "challendge.effects.hide.label": "Schowaj efekty wyzwania",
     "challendge.panel.label": "Wyzwania",
     "challendge.pending": "Oczekujące",
     "challendge.reclaimReserves.label": "Odzyskaj rezerwy",
@@ -287,6 +293,9 @@
     "challendge.ironWill.effect.desc": "Nic",
     "challendge.pacifism.label": "Pacyfizm",
     "challendge.pacifism.desc": "Zrestartuj grę bez możliwości polowania. Niektóre doktryny będą niedostępne.<br><br>Cel: Zbadaj doktrynę Traktatu Kosmicznego i zresetuj grę.",
+    "challendge.postApocalypse.label": "Postapokalipsa",
+    "challendge.postApocalypse.desc": "Znalazłeś uszkodzoną oś czasu ze skrajnym zanieczyszczeniem. Tylko wysłanie Twoich najsilniejszych kociąt pomoże posprzątać ten bałagan. Zanieczyszczenie ma negatywne skutki. <br>UWAGA: Masz ograniczony czas na ustalenie produkcji żywności po rozpoczęciu tego wyzwania.",
+    "challendge.postApocalypse.flavor": "\"Z pewnością nie może być tak źle\" przynajmniej tak myśleli",
     "challendge.winterIsComing.label": "Nadchodzi zima",
     "challendge.winterIsComing.desc": "Zrestartuj grę z samymi zimami.<br><br>Cel: Dotarcie do Heliosa.",
     "challendge.winterIsComing.effect.desc": "Pogoda się globalnie polepsza.",
@@ -354,6 +363,7 @@
     "effectsMgr.statics.culturalExchangeBonus.title": "Premia do produkcji kultury",
     "effectsMgr.statics.cultureMaxRatio.title": "Premia do maksymalnej kultury",
     "effectsMgr.statics.cultureMaxRatioBonus.title": "Bonus maksymalnej kultury Zigguratów",
+    "effectsMgr.statics.cultureFromManuscripts.title": "Kultura z manuskryptów",
     "effectsMgr.statics.dataCenterAIRatio.title": "Bonus za synergię danych AI",
     "effectsMgr.statics.eludiumAutomationBonus.title": "Premia Inżyniera Eludium",
     "effectsMgr.statics.embassyCostReduction.title": "Zmniejszenie kosztów ambasady",
@@ -418,6 +428,7 @@
     "effectsMgr.statics.onAHillCultureCap.title": "Bonus do limitu kultury",
     "effectsMgr.statics.oilReductionRatio.title": "Redukcja zużycia ropy",
     "effectsMgr.statics.oilWellRatio.title": "Premia do ropy",
+    "effectsMgr.statics.pactsAvailable.title": "Dostępne doktryny",
     "effectsMgr.statics.pactGlobalProductionRatio.title": "Produkcja per pyramida",
     "effectsMgr.statics.pollutionRatio.title": "Produkcja zanieczyszczeń",
     "effectsMgr.statics.planetCracker-uraniumPerTickSpace.title": "Planet Cracker - Konwersja uranu",
@@ -521,6 +532,7 @@
     "effectsMgr.statics.goldPolicyRatio.title": "Premia do produkcji złota",
     "effectsMgr.statics.springCatnipRatio.title": "Wiosenny bonus kocimiętki",
     "effectsMgr.statics.summerSolarFarmRatio.title": "Letni bonus Farmy Słonecznej",
+    "effectsMgr.winterEnergy.warning.title": "Niewystarczająca ilość energii do produkcji zimowej",
     "general.copy.to.clipboard.prompt": "Kopiuj do schowka: Ctrl + C, Enter",
     "general.food.advisor.text": "Doradca ds. Żywności: „Za mało zapasów kocimiętki!”",
     "iron.will.break.confirmation.msg": "To zakończy żelazną wolę. Jesteś pewny?",
@@ -578,6 +590,7 @@
     "opts.theme.arctic": "Arktyczny",
     "opts.theme.black": "Czarny",
     "opts.theme.bluish": "Niebieskawy",
+    "opts.theme.catnip": "Kocimiętka",
     "opts.theme.chocolate": "Czekolada",
     "opts.theme.computer": "Komputerowy",
     "opts.theme.cyber": "Cybernetyczny",
@@ -623,12 +636,14 @@
     "policy.autocracy.desc": "Najlepsza dla społeczeństw z wysoko awansowanymi kotkami. Sprawia, że przywódca jest dwa razy lepszy w swojej pracy. Przywódca zwiększa produkcję konwersyjną na podstawie niezapełnionych budynków mieszkalnych.",
     "policy.bigStickPolicy.label": "Zasada kija i marchewki",
     "policy.bigStickPolicy.desc": "Przemawiaj łagodnie, ale zbijaj swoich sąsiadów kiedy jest na to potrzeba. Ambasady są tańsze.",
+    "policy.carnivale.label": "Karnawał",
     "policy.cityOnAHill.label": "Miasto na Górce",
     "policy.cityOnAHill.desc": "Bądź wzorowym przykładem dla świata, którego nienawidzisz. Nieznacznie zwiększa limit kultury.",
     "policy.clearCutting.label": "Całkowita wycinka lasów",
     "policy.clearCutting.desc": "Wyniszcz lasy, starając się poprawić produkcję drewna.",
     "policy.clearSkies.label": "Czyste niebo",
     "policy.clearSkies.desc": "Psychologowie kociaków są zaniepokojeni wpływem luster kosmicznych na zadowolenie kociąt. Odrzucenie ich zapewni lekki wzrost szczęścia.",
+    "policy.cryochamberExtraction.label": "Nieśmiertelność",
     "policy.communism.label": "Komunizm",
     "policy.communism.desc": "Industrializacja za wszelką cenę. Zwiększa produkcję węgla, żelaza, tytanu i sprawia, że fabryki są tańsze.",
     "policy.conservation.label": "Ochrona środowiska",
@@ -669,6 +684,7 @@
     "policy.outerSpaceTreaty.label": "Traktat Przestrzeni Kosmicznej",
     "policy.outerSpaceTreaty.desc": "Przyznaj, że kosmos jest wspólną przestrzenią życiową wszystkich ras Cath, polepszając stosunki z partnerami handlowymi.",
     "policy.radicalXenophobia.label": "Radykalna Ksenofobia",
+    "policy.radicalXenophobia.desc": "Odrzuć zarówno złych kosmitów, jak i złe roboty. Mauzoleum jest dwukrotnie skuteczniejsze.",
     "policy.rationality.label": "Racjonalizm",
     "policy.rationality.desc": "Zaakceptuj pogląd, że świat może być fundamentalnie zrozumiany. Zdobądź małą premię do nauki i produkcji żelaza, chociaż możesz wyglądać głupio później.",
     "policy.republic.label": "Republika",
@@ -720,6 +736,7 @@
     "prestige.blackCodex.desc": "Odblokowuje cmentarzyska jednorożców.",
     "prestige.btn.burnParagon.label": "Spal swoje Paragony",
     "prestige.btn.burnParagon.desc": "Odrzuć wszystkie punkty Paragonu",
+    "prestige.btn.turnHGOff.label": "Wyłącz HG",
     "prestige.carnivals.label": "Karnawał",
     "prestige.carnivals.desc": "Festiwale teraz wydłużają swoją długośc zamiast się nakładać.",
     "prestige.chesed.label": "Doskonałość Chesed",
@@ -790,6 +807,7 @@
     "religion.faithCount.pool": "Adoracja: {0}",
     "religion.adore.confirmation.msg": "Czy na pewno chcesz wymienić adorację na epifanię?\n\nDostaniesz premię do przekształcenia wiary (Chwal słońce) w zależności od całkowitej ilości epifanii.\n\nEpifania oraz niniejsza premia będą zachowywane przez resety.\n\nKLIKNIĘCIE TEGO PRZYCISKU WYMAŻE CAŁĄ ADORACJĘ I ZRESETUJE PREMIĘ PRODUKCYJNĄ Z REWOLUCJI SŁONECZNEJ.",
     "religion.msg.corruption": "Twój skrzydłorożec został skorumpowany przez Znaczniki!",
+    "religion.pact.pactOfAnnihilation.label": "Pakt Anihilacji",
     "religion.pact.pactOfFanaticism.label": "Fanatyzm",
     "religion.pact.payDebt.label": "Spłać dług",
     "religion.panel.cryptotheology.label": "Kryptoteologia",
@@ -946,6 +964,7 @@
     "res.stack.weather": "Pogoda",
     "res.stack.zebraRelationsAppeasementPenalty": "Haracz dla Zebr",
     "res.toCap": "Do limitu",
+    "res.toNextKitten": "Do następnego kotka",
     "res.toNextNecrocorn": "Następny martworożec za",
     "res.toZero": "Do zera",
     "res.show.hidden": "Pokaż ukryte zasoby",
