--- a/res/i18n/crowdin/de.json
+++ b/res/i18n/crowdin/de.json
@@ -835,7 +835,13 @@
     "religion.faithCount.pool": "Gesamter Glaube: {0}",
     "religion.adore.confirmation.msg": "Bist du sicher, dass du allen Glauben in Epiphanie konvertieren möchtest?\n\nDu erhältst einen Bonus zu Glaubenskonvertierung (Lob die Sonne) basierend auf deiner Gesamtzahl an Epiphany.\n\nEpiphany und dieser Bonus bleiben auch beim Zurücksetzen erhalten.\n\nKLICKEN AUF DIESEN BUTTON WIRD SÄMTLICHEN GLAUBEN ENTFERNEN UND DEN SOLAR-REVOLUTION PRODUKTIONSBONUS ZURÜCKSETZEN.",
     "religion.msg.corruption": "Dein Alicorn wurde von den Markern korrumpiert!",
+    "religion.pact.pactOfAnnihilation.label": "Pakt der Vernichtung",
     "religion.pact.pactOfAnnihilation.desc": "Zerstörungskraft nutzen, Antimateriespeicher erhöhen",
+    "religion.pact.pactOfCleansing.label": "Pakt der Reinigung",
+    "religion.pact.pactOfDestruction.label": "Pakt der Zerstörung",
+    "religion.pact.pactOfDestruction.desc": "Zerstöre vollkommen Teile der Realität, um Ressourcen zu erhalten.",
+    "religion.pact.pactOfExtermination.label": "Pakt der Auslöschung",
+    "religion.pact.fractured.desc": "Du hast unsere Abmachung gebrochen... dafür wirst du bezahlen",
     "religion.panel.cryptotheology.label": "Cryptotheologie",
     "religion.panel.orderOfTheSun.label": "Orden der Sonne",
     "religion.panel.ziggurat.label": "Zikkurate",
@@ -905,6 +911,7 @@
     "religion.tu.darkNova.flavor": "Die Sterne sind Tot. Genauso wie unsere Hoffnungen und Träume.",
     "religion.tu.holyGenocide.label": "Heiliger Genozid",
     "religion.tu.holyGenocide.flavor": "Wir leben auf einer stillen Insel der Ignoranz in der mitte des schwarzen Sees der Unendlichkeit und es war nicht beabsichtigt dass wir weit reisen.",
+    "religion.tu.mausoleum.label": "Mausoleum",
     "religion.tu.singularity.label": "Ereignishorizont",
     "religion.tu.singularity.desc": "Erhöht globale Resourcenlimits um 10%",
     "religion.tu.singularity.flavor": "Ein Tor... Zu was?",
@@ -948,9 +955,11 @@
     "res.notify.unavailable": "Dieses Gebäude wird nicht verfügbar sein, aufgrund dass du nicht genug benötigte Ressourcen Speichern kannst. Versuche es später erneut.",
     "res.notify.unavailableTime": "Die Gebäude werden erst ({0}+ Tage) in der zukunft verfügbar sein. Versuch es später erneut.",
     "res.stack.baseline": "Ohne Verbesserung",
+    "res.stack.baselineRatio": "Verbesserung",
     "res.stack.bonusTransf": "Bonus Übertragen",
     "res.stack.boost": "Verstärkung",
     "res.stack.buildings": "Gebäude",
+    "res.stack.corruptionPerDay": "Korruption",
     "res.stack.policy": "Richtlinie",
     "res.stack.pollution": "Umweltverschmutzung",
     "res.stack.convCons": "Konversations Verbrauch",
@@ -1038,12 +1047,12 @@
     "resources.paragon.title": "Vorbild-Punkte",
     "resources.parchment.title": "Pergament",
     "resources.plate.title": "Eisenplatte",
-    "resources.relic.title": "Relikt",
+    "resources.relic.title": "relikt",
     "resources.scaffold.title": "Gerüst",
     "resources.science.title": "Forschung",
     "resources.ship.title": "Schiffe",
     "resources.slab.title": "Platten",
-    "resources.sorrow.title": "Trauer",
+    "resources.sorrow.title": "kummer",
     "resources.spice.title": "Gewürze",
     "resources.starchart.title": "Sternkarte",
     "resources.steel.title": "Stahl",
@@ -1509,6 +1518,7 @@
     "trade.correct.bcoin": "Es gab eine riesige Krypto-Marktkorrektur",
     "trade.embassy.label": "Botschaft",
     "trade.embassy.desc": "Verbessere deine diplomatischen Beziehungen mit dem Errichten einer Botschaft",
+    "trade.embassy.chance": "Chance Ressourcen zu erhalten",
     "trade.embassy.pinned": "Angepinnt",
     "trade.embassy.unpinned": "Gelöst",
     "turnHGOff.confirmation.msg": "Bist du sicher, dass du das Heilige Genozid für diese und zukünftige Läufe ausschalten möchtest?",
@@ -1639,6 +1649,7 @@
     "village.btn.unassign": "Anführer abwählen",
     "village.btn.unassign.job": "Von Beruf entbinden",
     "village.btn.upgradeExplorers": "Verbessere Entdecker",
+    "village.btn.upgradeHQ.desc": "Verbessert das maximale Limit deiner Expeditionsvorräte bei 5 Tagen um + 1%",
     "village.btn.unwrap": "Packe Geschenk aus",
     "village.btn.unwrap.confirmation.msg": "Bist du dir sicher, dass du das Geschenk jetzt öffnen willst? Eventuell bekommst du ein besseres Geschenk, wenn du noch ein wenig wartest!",
     "village.census.age": "Jahre alt",
@@ -2008,6 +2019,7 @@
     "workshop.logistics.label": "Logistik",
     "workshop.logistics.desc": "Kätzchen-Fähigkeiten sind 15% effektiver",
     "workshop.longRangeSpaceships.label": "Langstrecken-Raumschiff",
+    "workshop.longRangeSpaceships.desc": "Schaltet Weltraum-Shuttles frei. Benötigt eine Besatzung von zwei Kätzchen",
     "workshop.mWReactor.label": "Mikro-Warp Reaktoren",
     "workshop.mWReactor.desc": "Ein neuer Reaktor auf Eludium-Basis für Mond-Außenposten. Die Produktion von Unobtainium ist um 75% effektiver.",
     "workshop.machineLearning.label": "Maschinelles Lernen",
@@ -2079,6 +2091,7 @@
     "workshop.silos.desc": "Lagerhäuser können jetzt Katzenminze lagern",
     "workshop.silos.flavor": "Natürlich mit Teppichboden und Klettergriffen",
     "workshop.solarSatellites.label": "Sonnensatelliten",
+    "workshop.solarSatellites.desc": "Satelliten produzieren ab sofort Energie, anstatt sie zu verbrauchen",
     "workshop.spaceEngineers.label": "Weltraumingenieure",
     "workshop.spaceEngineers.desc": "Verbessert Effektivität der Ingenieure",
     "workshop.spaceManufacturing.label": "Weltraumproduktion",
@@ -2142,5 +2155,6 @@
     "workshop.voidEnergy.desc": "Das Speichern von Ressourcen in Energierissen ist noch effektiver.",
     "workshop.voidReactors.label": "Voidreaktoren",
     "workshop.voidReactors.desc": "Your Research Vessels are 4 times as effective",
+    "workshop.zebraUpgrade.bloodstoneInstitute.label": "Blutstein Institut",
     "workshop.zebraUpgrade.darkRevolution.label": "Dunkle Revolution"
 }
